deploy/yc-sirius/edu-roman-grachev/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  namespace: edu-roman-grachev 
  labels:
    app: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django-app
          image: grroma/django_app:bd7995a
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
