deploy/yc-sirius/edu-roman-grachev/django-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: django-service
  namespace: edu-roman-grachev
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31251
  type: NodePort
