deploy/yc-sirius/edu-roman-grachev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: edu-roman-grachev
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31251
  type: NodePort
